--- a/style.css
+++ b/style.css
@@ -1,88 +1,108 @@
 body {
-    padding: 0;
-    font-family: "Arial", sans-serif;
-    font-size: 14px;
-    line-height: 18px;
-    color: #000000;
-    background: #ffffff url("img/preview.jpg") no-repeat 50% 0;
-  }
-  
-  h1 {
-    width: 260px;
-    font-family: "Georgia", serif;
-    font-size: 36px;
-    line-height: 36px;
-  }
-  
-  h2 {
-    padding-bottom: 12px;
-    border-bottom: 1px solid #cccccc;
-  }
-  
-  .site-header {
-    margin-bottom: 30px;
-  }
-  
-  .skills-item {
-    margin-bottom: 15px;
-    padding-left: 20px;
-    border-left: 10px solid #c4c4c4;
-    color: #999999;
-  }
-  
-  /* Let's add a new empty rule here */
-  
-  .standard {
-    border-color: #ffc5b3;
-    color: #666666;
-  }
-  
-  .container {
-    width: 480px;
-    margin: 0 auto;
-  }
-  
-  .site-header img {
-    display: block;
-    margin: 0 auto;
-  }
-  
-  .features {
-    margin-bottom: 30px;
-  }
-  
-  .features p {
-    display: inline-block;
-    vertical-align: top;
-    width: 30%;
-    margin: 0 5px;
-    text-align: center;
-    background-repeat: no-repeat;
-    background-position: center top;
-  }
-  
-  .feature-kitten {
-    padding-top: 60px;
-    background-image: url("img/in-love.png");
-  }
-  
-  .feature-cat {
-    padding-top: 60px;
-    background-image: url("img/hearts.png");
-  }
-  
-  .feature-train {
-    padding-top: 60px;
-    background-image: url("img/love-letter.png");
-  }
-  
-  .skills-list {
-    padding: 0;
-    list-style: none;
-  }
-  
-  .site-footer {
-    display: flex;
-    justify-content: space-between;
-    color: #999999;
-  }
+  padding: 0;
+  font-family: "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  color: #000000;
+  background: #ffffff url("img/preview.jpg") no-repeat 50% 0;
+}
+
+h1 {
+  width: 260px;
+  font-family: "Georgia", serif;
+  font-size: 36px;
+  line-height: 36px;
+}
+
+h2 {
+  padding-bottom: 12px;
+  border-bottom: 1px solid #cccccc;
+}
+
+.site-header {
+  margin-bottom: 30px;
+}
+
+.skills-item {
+  margin-bottom: 15px;
+  padding-left: 20px;
+  border-left: 10px solid #c4c4c4;
+  color: #999999;
+}
+
+/* Let's add a new empty rule here */
+
+.standard {
+  border-color: #ffc5b3;
+  color: #666666;
+}
+
+.container {
+  width: 480px;
+  margin: 0 auto;
+}
+
+.site-header img {
+  display: block;
+  margin: 0 auto;
+}
+
+.features {
+  margin-bottom: 30px;
+}
+
+.features p {
+  display: inline-block;
+  vertical-align: top;
+  width: 30%;
+  margin: 0 5px;
+  text-align: center;
+  background-repeat: no-repeat;
+  background-position: center top;
+}
+
+.feature-kitten {
+  padding-top: 60px;
+  background-image: url("img/in-love.png");
+}
+
+.feature-cat {
+  padding-top: 60px;
+  background-image: url("img/hearts.png");
+}
+
+.feature-train {
+  padding-top: 60px;
+  background-image: url("img/love-letter.png");
+}
+
+.skills-list {
+  padding: 0;
+  list-style: none;
+}
+
+.site-footer {
+  display: flex;
+  justify-content: space-between;
+  color: #999999;
+}
+.wishes {
+  margin-top: 30px;
+  text-align: center;
+}
+
+#btn_love_wishes {
+  background: #ff5a26;
+  color: #ffc5b3;
+  border: 5px solid #ffc5b3;
+  border-radius: 10px;
+  padding: 10px 20px;
+  font-size: 36px;
+  cursor: pointer;
+}
+
+#p-love-wishes {
+  font-size: 36px;
+  line-height: 40px;
+  color: #ff5a26;
+}
