зробив блок з купівлею

--- a/css/style.css
+++ b/css/style.css
@@ -110,10 +110,11 @@ h2 {
 
 /*Block with purchase and display💖*/
 .site-footer p {
-  border:1px solid #ff5e26
-  
-
-
+  border:1px solid #ff5e26;
+  paddingh: 10px 20px;
+  border-radius: 10px 0px;
+  background-color: #ffc5b3;
+  cursor: pointer;
 }
 
 
